# finder-pw

./: .gitignore  LICENSE  README.md  history.html  index.html  package-lock.json  package.json  pubkey.gpg
.github/workflows/: release.yml
assets/: finder.desktop  pwfinder.desktop
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
docs/: PUBLISHING.md
pool/main/f/finder/: Finder_0.1.0_amd64.deb  Finder_0.1.1_amd64.deb
pool/main/p/pwfinder/: PWFinder_0.1.2_amd64.deb  PWFinder_0.2.0_amd64.deb  PWFinder_0.2.1_amd64.deb  PWFinder_0.3.0_amd64.deb  PWFinder_0.3.0_arm64.deb  PWFinder_0.3.1_amd64.deb  PWFinder_0.3.1_arm64.deb
scripts/: build-apt-repo.sh
src/: App.css  App.tsx  fsApi.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  ssh.rs
src/components/: ContextMenu.tsx  FileList.tsx  Pane.tsx  PaneSettings.tsx  SplitGrid.tsx  SshConnectModal.tsx  Toolbar.tsx  TreeSidebar.tsx
