[package]
name = "finder"
version = "0.1.1"
description = "A 4-split file explorer"
authors = ["pw"]
edition = "2021"

[lib]
name = "finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
