[package]
name = "pwfinder"
version = "0.4.2"
description = "A 4-split file explorer"
authors = ["PinkWink"]
edition = "2021"

[lib]
name = "pwfinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
russh = "0.60"
russh-sftp = "2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "fs", "net"] }
uuid = { version = "1", features = ["v4"] }
